--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "app.js",
   "scripts": {
     "start": "electron .",
-    "build": "electron-packager . Odyssey --overwrite --platform=win32 --icon=assets/icons/logo.ico"
+    "build": "electron-packager . Odyssey --overwrite --platform=win32 --icon=assets/icons/logo.ico",
+    "build-unix" : "electron-packager . Odyssey --overwrite --platform=linux --arch=x64 --icon=assets/icons/logo.png",
+    "build-unix32" : "electron-packager . Odyssey --overwrite --platform=linux --arch=ia32 --icon=assets/icons/logo.png"
   },
   "repository": {
     "type": "git",
