--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "odyssey",
-  "version": "1.3.5",
+  "version": "1.3.6",
   "description": "Rich Text Editor designed for writers novelists and poets.",
   "main": "app.js",
   "scripts": {
@@ -31,5 +31,8 @@
     "electron": "^1.7.12",
     "electron-packager": "^10.1.2",
     "pixi.js": "^4.7.0"
+  },
+  "devDependencies": {
+    "electron-rebuild": "^1.7.3"
   }
 }
