--- a/package.json
+++ b/package.json
@@ -70,8 +70,7 @@
     "electron-compile": "^6.4.2",
     "electron-spellchecker": "^1.1.2",
     "electron-squirrel-startup": "^1.0.0",
-    "pixi.js": "^4.7.0",
-    "spell": "^1.0.0"
+    "pixi.js": "^4.7.0"
   },
   "devDependencies": {
     "electron-forge": "^5.1.1",
