--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "electron-compile": "^6.4.2",
     "electron-squirrel-startup": "^1.0.0",
     "electron": "^1.7.12",
-    "pixi.js": "^4.7.0"
+    "pixi.js": "^4.7.0",
+    "express": "^4.16.0"
   },
   "devDependencies": {
     "electron-forge": "^5.1.1",
