--- a/package.json
+++ b/package.json
@@ -1,77 +1,27 @@
 {
-  "name": "odyssey",
-  "version": "1.3.6",
-  "description": "Rich Text Editor designed for writers novelists and poets.",
-  "main": "app/app.js",
+  "name": "odyssey-website",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.mjs",
   "scripts": {
-    "start": "electron-forge start",
-    "build": "electron-forge package Odyssey --asar=true",
-    "build-win": "electron-forge package Odyssey --platform=win32 --arch=x64 --asar=true",
-    "build-win32": "electron-forge package Odyssey --platform=win32 --arch=ia32 --asar=true",
-    "build-unix": "electron-forge package Odyssey --platform=linux --arch=x64 --asar=true",
-    "build-unix32": "electron-packager . Odyssey --platform=linux --arch=ia32 --asar=true",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish"
+    "start": "nodemon --experimental-modules app.mjs"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Ph0enixKM/Odyssey.git"
+    "url": "git+https://github.com/Ph0enixKM/odyssey-website.git"
   },
   "keywords": [
-    "odyssey",
-    "text",
-    "editor",
-    "writers",
-    "novelists",
-    "poets"
+    "Odyssey",
+    "Website"
   ],
-  "author": "Paweł Karaś (Phoenix)",
+  "author": "Paweł Karaś",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Ph0enixKM/Odyssey/issues"
+    "url": "https://github.com/Ph0enixKM/odyssey-website/issues"
   },
-  "homepage": "https://github.com/Ph0enixKM/Odyssey#readme",
-  "config": {
-    "forge": {
-      "make_targets": {
-        "win32": [
-          "squirrel"
-        ],
-        "darwin": [
-          "zip"
-        ],
-        "linux": [
-          "deb",
-          "rpm"
-        ]
-      },
-      "electronPackagerConfig": {
-        "packageManager": "yarn"
-      },
-      "electronWinstallerConfig": {
-        "name": "odyssey_alpha"
-      },
-      "electronInstallerDebian": {},
-      "electronInstallerRedhat": {},
-      "github_repository": {
-        "owner": "",
-        "name": ""
-      },
-      "windowsStoreConfig": {
-        "packageName": "",
-        "name": "odyssey_alpha"
-      }
-    }
-  },
-  "dependencies": {
-    "electron-compile": "^6.4.2",
-    "electron-squirrel-startup": "^1.0.0",
-    "electron": "^1.7.12",
-    "pixi.js": "^4.7.0",
-    "express": "^4.16.0"
-  },
-  "devDependencies": {
-    "electron-forge": "^5.1.1",
-    "electron-prebuilt-compile": "1.8.4"
+  "homepage": "https://github.com/Ph0enixKM/odyssey-website#readme",
+  "dependencies" : {
+    "express": "^4.16.0",
+    "nodemon": "*"
   }
 }
