Added color recognition

--- a/package.json
+++ b/package.json
@@ -67,13 +67,14 @@
     }
   },
   "dependencies": {
+    "brainjs": "^0.7.4",
     "cargodb": "^1.0.2",
     "docx2html": "^1.1.0",
     "electron": "^1.7.12",
     "electron-compile": "^6.4.2",
     "electron-spellchecker": "^1.1.2",
     "electron-squirrel-startup": "^1.0.0",
-    "electron-winstaller" : "^2.6.4",
+    "electron-winstaller": "^2.6.4",
     "html-docx-js": "^0.3.1",
     "mammoth": "^1.4.5",
     "pixi.js": "^4.7.0"
