--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Odyssey",
-  "version": "1.3.7",
+  "version": "1.4.0",
   "description": "Rich Text Editor designed for writers novelists and poets.",
   "main": "app/app.js",
   "scripts": {
@@ -77,6 +77,7 @@
     "electron-winstaller": "^2.6.4",
     "html-docx-js": "^0.3.1",
     "mammoth": "^1.4.5",
+    "os-locale": "^2.1.0",
     "pixi.js": "^4.7.0"
   },
   "devDependencies": {
