Updated package libs

--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "start": "electron-forge start",
     "build": "electron-forge package Odyssey --asar=true",
     "build-win": "electron-forge package Odyssey --platform=win32 --arch=x64 --asar=true",
-    "build-win32": "electron-forge package Odyssey --platform=win32 --arch=ia32 --asar=true",
-    "build-unix": "electron-forge package Odyssey --platform=linux --arch=x64 --asar=true",
-    "build-unix32": "electron-forge package Odyssey --platform=linux --arch=ia32 --asar=true",
+    "build-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=app/assets/icons/logo.icns --prune=true --out=release-builds",
+    "build-linux": "electron-packager . --overwrite --platform=linux --arch=x64 --icon=app/assets/icons/logo.png --prune=true --out=release-builds",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
     "installer": "node install.js"
@@ -72,6 +71,7 @@
     "docx2html": "^1.1.0",
     "electron": "^1.7.12",
     "electron-compile": "^6.4.2",
+    "electron-packager": "^12.1.0",
     "electron-spellchecker": "^1.1.2",
     "electron-squirrel-startup": "^1.0.0",
     "electron-winstaller": "^2.6.4",
