--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "electron-forge start",
     "build": "electron-forge package Odyssey --asar=true",
-    "build-win": "electron-forge package Odyssey --platform=win32 --arch=x64 --asar=true",
+    "build-win": "electron-packager . --overwrite --platform=win32 --arch=x64 --icon=app/assets/icons/logo.icon --prune=true --out=release-builds",
     "build-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=app/assets/icons/logo.icns --prune=true --out=release-builds",
     "build-linux": "electron-packager . --overwrite --platform=linux --arch=x64 --icon=app/assets/icons/logo.png --prune=true --out=release-builds",
     "make": "electron-forge make",
